added join queries
